updated index.html, data.html, comparison.html and css files.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,9 @@
 }
 
 .display-4{
+
+  
+  display:flex;
   font-size:50px;
   color: #4aaaa5;
   position:center;
@@ -33,7 +36,48 @@
 
 }
 
-#initial-image {
-  height: 400px;
+#initial-image1 {
+  height: 300px;
+  float:left;
+  display:flex;
+  justify-content: center;
 
+
+}
+#initial-image {
+  height: 200px;
+  justify-content: center;
+  
+
+}
+
+.navbar-light .navbar-brand{
+  
+  color:white;
+  border-radius: 3px;
+  background:#4aaaa5;
+  display:inline-block;
+  font-family:'Georgia';
+}
+.container {
+  height: 800px;
+  padding-top: 20px;
+  padding-left:20px;
+  padding-right:20px;
+  padding-bottom:20px;
+  background:white;
+  color:black;
+} 
+  
+.col-md-6 {
+
+  padding: 20px;
+  background:white;
+  box-shadow: whitesmoke;
+  
+
+}
+.lead
+{
+  font-size:20px;
 }
